--- a/kubernetes/epad-deployment.yaml
+++ b/kubernetes/epad-deployment.yaml
@@ -10,7 +10,8 @@ metadata:
   name: epad
 spec:
   replicas: 1
-  strategy: {}
+  strategy:
+    type: Recreate
   template:
     metadata:
       creationTimestamp: null
@@ -23,5 +24,12 @@ spec:
         ports:
         - containerPort: 8080
         resources: {}
+        volumeMounts:
+        - mountPath: /root/DicomProxy
+          name: dicomproxy
       restartPolicy: Always
+      volumes:
+      - name: dicomproxy
+        persistentVolumeClaim:
+          claimName: dicomproxy
 status: {}
