--- a/kubernetes/mysql-deployment.yaml
+++ b/kubernetes/mysql-deployment.yaml
@@ -1,3 +1,14 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql
+spec:
+  ports:
+  - port: 3306
+  selector:
+    app: mysql
+  clusterIP: None
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -24,5 +35,8 @@ spec:
         image: rubinlab/mysql
         name: mysql
         resources: {}
+        ports:
+        - containerPort: 3306
+          name: mysql
       restartPolicy: Always
 status: {}
