trying something else

--- a/Dockerfile.epad
+++ b/Dockerfile.epad
@@ -2,6 +2,9 @@ FROM rubinlab/epad
 
 # docker build -t srcc/epad:epad -f Dockerfile.epad .
 
+# Add install script to do the same
+ADD /epad-install.sh /epad-install.sh
+
 # Create /root/DicomProxy Hierarchy
 RUN mkdir -p /root/DicomProxy/mysql && \
     mkdir -p /root/DicomProxy/etc  && \
@@ -26,6 +29,7 @@ RUN mkdir -p /root/DicomProxy/mysql && \
     mkdir -p /root/DicomProxy/resources/templates && \
     mkdir -p /root/DicomProxy/resources/upload  && \
     wget --directory-prefix=/root/DicomProxy/webapps/ ftp://epad-distribution.stanford.edu/ePad.war  && \
-    wget --directory-prefix=/root/DicomProxy/lib/ ftp://epad-distribution.stanford.edu/epad-ws-1.1-jar-with-dependencies.jar
+    wget --directory-prefix=/root/DicomProxy/lib/ ftp://epad-distribution.stanford.edu/epad-ws-1.1-jar-with-dependencies.jar && \
+    chmod u+x /epad-install.sh
 
 EXPOSE 8080
